--- a/M2/M2D1/W1-P1.md
+++ b/M2/M2D1/W1-P1.md
@@ -1,3 +1,6 @@
 1. Cos'è un algoritmo? Prova a spiegarlo con parole tue, come se lo dovessi spiegare a qualcuno che non ne capisce niente di informatica.
+l'algoritmo è una procedura che mira a risolvere un problema.
 2. Cos'è una variabile? Prova a spiegarlo con parole tue, come se lo dovessi spiegare a qualcuno che non ne capisce niente di informatica.
+ le variabili sono le componenti della nostra "ricetta" che, mescolati insieme, aiutano alla risoluzione del problema.
 3. undefined e null sono la stessa cosa (falso)
+non sono la stessa cosa. null significa che all'interno di una determinata variabile non c'è nulla. invece undefined significa che alla variabile non è stato assegnato o non è stato dichiarato nessun valore.
